--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Test</h1>
+<button type="button" onclick="window.open('bloxcity://killyourself'); window.open('pornhub.com'); alert('dumbass');"> kys </button>
