Create index.html for bloxcitytest GitHub Pages

--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@
 </script>
 
 <button type="button" onclick="window.open('bloxcity://killyourself'); window.open('bloxcity.com'); alert('dumbass');"> kys </button>
+<h4>test</h4>
