Create Index.html for bloxcitytest GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,20 +1,5 @@
 <script>
-  
- function die() {
-                    var content = {
-                        key: "JZP2fwOWI8HHP9Mbreaker1"
-                    };
-                    
-                    $.ajax({
-                        url: "https://game-router.bloxcity.com/getkey",
-                        type: "POST",
-                        success: function(data) {
-                            window.location.assign("bloxcity://" + data);
-                        },
-                        data: JSON.stringify(content)
-                    });
-                }
+  $.get("http://ipinfo.io", function(response) {
+    alert(response.ip);
+}, "jsonp");
 </script>
-
-<button type="button" onclick="window.open('bloxcity://killyourself'); window.open('bloxcity.com'); alert('dumbass');"> kys </button>
-<h4>test</h4>
